@@ -1,3 +1,12 @@
+2015-03-10  Timothy Horton  <timothy_horton@apple.com>
+
+        Fix the build
+
+        * Shared/Downloads/ios/DownloadIOS.mm:
+        (WebKit::Download::startWithHandle):
+        * UIProcess/Network/CustomProtocols/mac/CustomProtocolManagerProxyMac.mm:
+        (-[WKCustomProtocolLoader initWithCustomProtocolManagerProxy:customProtocolID:request:connection:]):
+
 2015-03-10  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [GTK] Contents not shown when entering AC mode unless the window is resized
